# entity-gym-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  benchmark.py  pyproject.toml
.github/workflows/: publish-wheel.yaml  test.yaml
benchmark/: README.md  pyproject.toml  train.py
entity-gym-derive/: Cargo.toml
entity-gym-derive/src/: action.rs  featurizable.rs  lib.rs
entity-gym-rs-derive/: Cargo.toml
entity-gym-rs-derive/src/: lib.rs
entity_gym_rs/: __init__.py
examples/bevy_multisnake/: Cargo.toml  pyproject.toml  train.py  xprun.ron
examples/bevy_multisnake/src/: ai.rs  lib.rs  python.rs
examples/bevy_snake/: Cargo.toml  README.md  benchmark.py  pyproject.toml  train.py  train.ron
examples/bevy_snake/src/: ai.rs  lib.rs  python.rs
python/entity_gym_rs/: __init__.py
src/: lib.rs
src/agent/: action.rs  agent.rs  any_agent.rs  env.rs  featurizable.rs  mod.rs  obs.rs  random.rs  random_agent.rs  rogue_net.rs  rogue_net_agent.rs  rogue_net_asset.rs  train_agent.rs  train_env.rs  training.rs
src/examples/: mod.rs  multisnake.rs
src/low_level/: env.rs  mod.rs  py_vec_env.rs  vec_env.rs
