[project]
name = "entity-gym-rs"

[tool.poetry]
name = "entity-gym-rs"
version = "0.1.0"
description = ""
authors = ["Clemens Winter <clemenswinter1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10"
numpy = "^1.22.3"
ragged-buffer = "^0.3.7"
entity-gym = "^0.1.5"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.maturin]
features  = ["python"]