[package]
name = "bevy-snake-enn"
version = "0.1.0"
authors = ["Clemens Winter <clemenswinter1@gmail.com>", "Marcus Buffett <marcusbuffett@me.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bevy_snake_enn"

[dependencies]
bevy = "0.7.0"
rand = { version = "0.8.5", features = ["small_rng"] }
clap = { version = "3.1.7", features = ["derive"] }

entity-gym-rs = { path = "../.." }
pyo3 = { version = "0.15", features = ["extension-module"], optional = true }

[features]
python = ["pyo3", "entity-gym-rs/python"]
